* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.1.2
- Removed EL6 support

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.1.1-0
- update the upper bound of simplib for SIMP 6.5 release

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.1.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Wed May 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.5-0
- Maintenance: removed OBE build/rpm_metadata/requires

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
- Use Simplib::Umask data type in lieu of validate_umask(),
  a deprecated simplib Puppet 3 function.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 6.0.3-0
- Added Puppet 5 and OEL support
- Dropped support for Hiera v4.  Dependency auditd has dropped support
  for Hiera v4, causing Puppet 4.7 tests to fail in this module.
- Update badges and contribution guide URL in README.md

* Thu Jun 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Advance beyond bad changelog entry

* Thu Jun 16 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Update to Puppet 4 custom function
- Confine puppet version in metadata.json

* Thu Jan 05 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Removed the 'ctrl-alt-del' job since that has been moved into the 'simp'
  module

* Thu Dec 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Use simp_options module for global catalysts
- Use strongly typed parameters
- Fix bug whereby optional, respawn limit was not properly specified
  in upstart jobs.
- Refined upstart::job::sys_limit validation to reject non-integer numbers.

* Mon Nov 21 2016 SIMP-Team <https://groups.google.com/forum/#!forum/simp> - 5.0.0-0
- Updated module for compliance markup API v1.0.0 compatibility.

* Fri Jul 29 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.2-0